Revert "fix: fix spacing from top and other minor issues with UI (#3313)"
This reverts commit 8d8c367ec4233b62795876fef60b4102ba032504.

--- a/src/app/auth/new-password/new-password.page.scss
+++ b/src/app/auth/new-password/new-password.page.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   padding: 24px 20px;
-  margin-top: 18px;
   height: 100%;
   justify-content: space-between;
 
@@ -97,15 +96,16 @@
 
   &__arrow-icon {
     fill: $pure-white;
-    margin-right: 6px;
+    margin-right: 8px;
   }
 
   &__cta-secondary {
     display: flex;
-    padding-top: 18px;
+    padding-top: 12px;
     align-items: center;
-    justify-content: center;
+    align-self: stretch;
     color: $blue-black;
     flex-direction: row;
+    gap: 6px;
   }
 }
