--- a/src/app/auth/reset-password/reset-password.page.scss
+++ b/src/app/auth/reset-password/reset-password.page.scss
@@ -2,7 +2,6 @@
 
 .forgot-password {
   height: 100%;
-  margin-top: 18px;
 
   &__form-container {
     display: flex;
